ptucc_parser.output
Terminals unused in grammar

   BOOLEAN


Grammar

    0 $accept: program $end

    1 program: program_decl statement_list body '.'

    2 program_decl: KW_PROGRAM IDENT ';'

    3 body: KW_BEGIN statement_list KW_END

    4 statement_list: %empty
    5               | statement statement_list

    6 statement: subprogram_def
    7          | proc_call ';'
    8          | label_decl
    9          | goto_statement
   10          | assignment
   11          | KW_RETURN
   12          | type_def
   13          | var_declaration
   14          | loops

   15 loops: if_statement
   16      | for_statement
   17      | while_statement

   18 if_statement: KW_IF expression KW_THEN KW_BEGIN statement_list KW_END ';'
   19             | KW_IF expression KW_THEN KW_BEGIN statement_list KW_END ';' KW_ELSE KW_BEGIN statement_list KW_END ';'
   20             | KW_IF expression KW_THEN statement
   21             | KW_IF expression KW_THEN statement KW_ELSE statement
   22             | KW_IF expression KW_THEN statement KW_ELSE KW_BEGIN statement_list KW_END ';'
   23             | KW_IF expression KW_THEN KW_BEGIN statement_list KW_END ';' KW_ELSE statement

   24 while_statement: KW_WHILE expression KW_DO KW_BEGIN statement_list KW_END ';'
   25                | KW_REPEAT KW_BEGIN statement_list KW_END ';' KW_UNTIL expression
   26                | KW_WHILE expression KW_DO statement
   27                | KW_REPEAT statement KW_UNTIL expression

   28 for_statement: KW_FOR IDENT ASSIGN expression KW_TO expression KW_DO KW_BEGIN statement_list KW_END ';'
   29              | KW_FOR IDENT ASSIGN expression KW_DOWNTO expression KW_DO KW_BEGIN statement_list KW_END ';'
   30              | KW_FOR IDENT ASSIGN expression KW_TO expression KW_DO statement
   31              | KW_FOR IDENT ASSIGN expression KW_DOWNTO expression KW_DO statement

   32 label_decl: IDENT ':' label_body

   33 label_body: subprogram_def
   34           | proc_call ';'
   35           | label_decl ';'
   36           | goto_statement
   37           | assignment
   38           | KW_RETURN
   39           | type_def
   40           | var_declaration
   41           | loops

   42 goto_statement: KW_GOTO IDENT ';'

   43 proc_call: IDENT '(' arguments ')'

   44 arguments: %empty
   45          | expression
   46          | expression ',' arguments

   47 casting: '(' basic_types ')' expression
   48        | '(' ARRAY array_brackets KW_OF basic_types ')' expression

   49 expression: POSINT
   50           | REAL
   51           | arrays
   52           | IDENT
   53           | proc_call
   54           | KW_RESULT
   55           | STRING
   56           | casting
   57           | KW_TRUE
   58           | KW_FALSE
   59           | '+' expression
   60           | '-' expression
   61           | expression '*' expression
   62           | expression '/' expression
   63           | expression KW_DIV expression
   64           | expression KW_MOD expression
   65           | expression '+' expression
   66           | expression '-' expression
   67           | KW_NOT expression
   68           | '!' expression
   69           | expression '=' expression
   70           | expression KW_DIFFERENT expression
   71           | expression '<' expression
   72           | expression '>' expression
   73           | expression KW_LESS_OR_EQ expression
   74           | expression KW_MORE_OR_EQ expression
   75           | expression KW_AND expression
   76           | expression KW_OR expression
   77           | expression KW_AND_SYMB expression
   78           | expression KW_OR_SYMB expression
   79           | '(' in_brackets ')'

   80 in_brackets: POSINT
   81            | REAL
   82            | proc_call
   83            | KW_RESULT
   84            | STRING
   85            | casting
   86            | KW_TRUE
   87            | KW_FALSE
   88            | '+' expression
   89            | '-' expression
   90            | expression '*' expression
   91            | expression '/' expression
   92            | expression KW_DIV expression
   93            | expression KW_MOD expression
   94            | expression '+' expression
   95            | expression '-' expression
   96            | KW_NOT expression
   97            | '!' expression
   98            | expression '=' expression
   99            | expression KW_DIFFERENT expression
  100            | expression '<' expression
  101            | expression '>' expression
  102            | expression KW_LESS_OR_EQ expression
  103            | expression KW_MORE_OR_EQ expression
  104            | expression KW_AND expression
  105            | expression KW_OR expression
  106            | expression KW_AND_SYMB expression
  107            | expression KW_OR_SYMB expression

  108 assignment: IDENT ASSIGN expression ';'
  109           | KW_RESULT ASSIGN expression ';'

  110 basic_types: KW_BOOLEAN
  111            | KW_INTEGER
  112            | KW_REAL
  113            | KW_CHAR
  114            | IDENT

  115 proc_def_arg_main: names ':' ARRAY KW_OF basic_types
  116                  | names ':' basic_types

  117 proc_def_arguments: %empty
  118                   | proc_def_arg_main
  119                   | proc_def_arg_main ';' proc_def_arguments

  120 arrays: ARRAY array_brackets KW_OF basic_types

  121 array_brackets: %empty
  122               | '[' array_arg ']' array_brackets

  123 subprogram_def: KW_FUNCTION IDENT '(' proc_def_arguments ')' ':' FuncReturnTypes ';' statement_list body ';'
  124               | KW_PROCEDURE IDENT '(' proc_def_arguments ')' ';' statement_list body ';'

  125 FuncReturnTypes: basic_types
  126                | arrays

  127 array_arg: POSINT
  128          | array_arg '+' array_arg
  129          | array_arg '-' array_arg
  130          | array_arg '*' array_arg
  131          | array_arg '/' array_arg

  132 type_def: KW_TYPE type_def_body

  133 type_def_body: IDENT '=' basic_types after_type_def
  134              | IDENT '=' KW_FUNCTION '(' proc_def_arguments ')' ':' FuncReturnTypes after_type_def
  135              | IDENT '=' ARRAY typedef_array_brackets KW_OF basic_types after_type_def

  136 typedef_array_brackets: %empty
  137                       | '[' array_arg ']' typedef_array_brackets

  138 after_type_def: ';' type_def_body
  139               | ';'

  140 var_declaration: KW_VAR names ':' basic_types var_decl_more
  141                | KW_VAR names ':' ARRAY array_brackets KW_OF basic_types var_decl_more

  142 var_decl_more: ';' names ':' basic_types var_decl_more
  143              | ';' names ':' ARRAY array_brackets KW_OF basic_types var_decl_more
  144              | ';'

  145 names: IDENT
  146      | IDENT ',' names


Terminals, with rules where they appear

$end (0) 0
'!' (33) 68 97
'(' (40) 43 47 48 79 123 124 134
')' (41) 43 47 48 79 123 124 134
'*' (42) 61 90 130
'+' (43) 59 65 88 94 128
',' (44) 46 146
'-' (45) 60 66 89 95 129
'.' (46) 1
'/' (47) 62 91 131
':' (58) 32 115 116 123 134 140 141 142 143
';' (59) 2 7 18 19 22 23 24 25 28 29 34 35 42 108 109 119 123 124 138
    139 142 143 144
'<' (60) 71 100
'=' (61) 69 98 133 134 135
'>' (62) 72 101
'[' (91) 122 137
']' (93) 122 137
error (256)
IDENT (258) 2 28 29 30 31 32 42 43 52 108 114 123 124 133 134 135 145
    146
POSINT (259) 49 80 127
REAL (260) 50 81
BOOLEAN (261)
STRING (262) 55 84
ASSIGN (263) 28 29 30 31 108 109
KW_PROGRAM (264) 2
KW_BEGIN (265) 3 18 19 22 23 24 25 28 29
KW_END (266) 3 18 19 22 23 24 25 28 29
KW_AND (267) 75 104
KW_DIV (268) 63 92
KW_FUNCTION (269) 123 134
KW_MOD (270) 64 93
KW_PROCEDURE (271) 124
KW_RESULT (272) 54 83 109
ARRAY (273) 48 115 120 135 141 143
KW_DO (274) 24 26 28 29 30 31
KW_GOTO (275) 42
KW_NOT (276) 67 96
KW_RETURN (277) 11 38
KW_BOOLEAN (278) 110
KW_ELSE (279) 19 21 22 23
KW_IF (280) 18 19 20 21 22 23
KW_OF (281) 48 115 120 135 141 143
KW_REAL (282) 112
KW_THEN (283) 18 19 20 21 22 23
KW_CHAR (284) 113
KW_FOR (285) 28 29 30 31
KW_INTEGER (286) 111
KW_OR (287) 76 105
KW_REPEAT (288) 25 27
KW_UNTIL (289) 25 27
KW_VAR (290) 140 141
KW_WHILE (291) 24 26
KW_TO (292) 28 30
KW_DOWNTO (293) 29 31
KW_DIFFERENT (294) 70 99
KW_LESS_OR_EQ (295) 73 102
KW_MORE_OR_EQ (296) 74 103
KW_AND_SYMB (297) 77 106
KW_OR_SYMB (298) 78 107
KW_TYPE (299) 132
KW_TRUE (300) 57 86
KW_FALSE (301) 58 87


Nonterminals, with rules where they appear

$accept (63)
    on left: 0
program (64)
    on left: 1, on right: 0
program_decl (65)
    on left: 2, on right: 1
body (66)
    on left: 3, on right: 1 123 124
statement_list (67)
    on left: 4 5, on right: 1 3 5 18 19 22 23 24 25 28 29 123 124
statement (68)
    on left: 6 7 8 9 10 11 12 13 14, on right: 5 20 21 22 23 26 27
    30 31
loops (69)
    on left: 15 16 17, on right: 14 41
if_statement (70)
    on left: 18 19 20 21 22 23, on right: 15
while_statement (71)
    on left: 24 25 26 27, on right: 17
for_statement (72)
    on left: 28 29 30 31, on right: 16
label_decl (73)
    on left: 32, on right: 8 35
label_body (74)
    on left: 33 34 35 36 37 38 39 40 41, on right: 32
goto_statement (75)
    on left: 42, on right: 9 36
proc_call (76)
    on left: 43, on right: 7 34 53 82
arguments (77)
    on left: 44 45 46, on right: 43 46
casting (78)
    on left: 47 48, on right: 56 85
expression (79)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 69 70 71 72 73 74 75 76 77 78 79, on right: 18 19 20 21 22
    23 24 25 26 27 28 29 30 31 45 46 47 48 59 60 61 62 63 64 65 66
    67 68 69 70 71 72 73 74 75 76 77 78 88 89 90 91 92 93 94 95 96
    97 98 99 100 101 102 103 104 105 106 107 108 109
in_brackets (80)
    on left: 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97
    98 99 100 101 102 103 104 105 106 107, on right: 79
assignment (81)
    on left: 108 109, on right: 10 37
basic_types (82)
    on left: 110 111 112 113 114, on right: 47 48 115 116 120 125 133
    135 140 141 142 143
proc_def_arg_main (83)
    on left: 115 116, on right: 118 119
proc_def_arguments (84)
    on left: 117 118 119, on right: 119 123 124 134
arrays (85)
    on left: 120, on right: 51 126
array_brackets (86)
    on left: 121 122, on right: 48 120 122 141 143
subprogram_def (87)
    on left: 123 124, on right: 6 33
FuncReturnTypes (88)
    on left: 125 126, on right: 123 134
array_arg (89)
    on left: 127 128 129 130 131, on right: 122 128 129 130 131 137
type_def (90)
    on left: 132, on right: 12 39
type_def_body (91)
    on left: 133 134 135, on right: 132 138
typedef_array_brackets (92)
    on left: 136 137, on right: 135 137
after_type_def (93)
    on left: 138 139, on right: 133 134 135
var_declaration (94)
    on left: 140 141, on right: 13 40
var_decl_more (95)
    on left: 142 143 144, on right: 140 141 142 143
names (96)
    on left: 145 146, on right: 115 116 140 141 142 143 146


State 0

    0 $accept: . program $end
    1 program: . program_decl statement_list body '.'
    2 program_decl: . KW_PROGRAM IDENT ';'

    KW_PROGRAM  shift, and go to state 1

    program       go to state 2
    program_decl  go to state 3


State 1

    2 program_decl: KW_PROGRAM . IDENT ';'

    IDENT  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: program_decl . statement_list body '.'
    4 statement_list: . %empty  [KW_BEGIN]
    5               | . statement statement_list
    6 statement: . subprogram_def
    7          | . proc_call ';'
    8          | . label_decl
    9          | . goto_statement
   10          | . assignment
   11          | . KW_RETURN
   12          | . type_def
   13          | . var_declaration
   14          | . loops
   15 loops: . if_statement
   16      | . for_statement
   17      | . while_statement
   18 if_statement: . KW_IF expression KW_THEN KW_BEGIN statement_list KW_END ';'
   19             | . KW_IF expression KW_THEN KW_BEGIN statement_list KW_END ';' KW_ELSE KW_BEGIN statement_list KW_END ';'
   20             | . KW_IF expression KW_THEN statement
   21             | . KW_IF expression KW_THEN statement KW_ELSE statement
   22             | . KW_IF expression KW_THEN statement KW_ELSE KW_BEGIN statement_list KW_END ';'
   23             | . KW_IF expression KW_THEN KW_BEGIN statement_list KW_END ';' KW_ELSE statement
   24 while_statement: . KW_WHILE expression KW_DO KW_BEGIN statement_list KW_END ';'
   25                | . KW_REPEAT KW_BEGIN statement_list KW_END ';' KW_UNTIL expression
   26                | . KW_WHILE expression KW_DO statement
   27                | . KW_REPEAT statement KW_UNTIL expression
   28 for_statement: . KW_FOR IDENT ASSIGN expression KW_TO expression KW_DO KW_BEGIN statement_list KW_END ';'
   29              | . KW_FOR IDENT ASSIGN expression KW_DOWNTO expression KW_DO KW_BEGIN statement_list KW_END ';'
   30              | . KW_FOR IDENT ASSIGN expression KW_TO expression KW_DO statement
   31              | . KW_FOR IDENT ASSIGN expression KW_DOWNTO expression KW_DO statement
   32 label_decl: . IDENT ':' label_body
   42 goto_statement: . KW_GOTO IDENT ';'
   43 proc_call: . IDENT '(' arguments ')'
  108 assignment: . IDENT ASSIGN expression ';'
  109           | . KW_RESULT ASSIGN expression ';'
  123 subprogram_def: . KW_FUNCTION IDENT '(' proc_def_arguments ')' ':' FuncReturnTypes ';' statement_list body ';'
  124               | . KW_PROCEDURE IDENT '(' proc_def_arguments ')' ';' statement_list body ';'
  132 type_def: . KW_TYPE type_def_body
  140 var_declaration: . KW_VAR names ':' basic_types var_decl_more
  141                | . KW_VAR names ':' ARRAY array_brackets KW_OF basic_types var_decl_more

    IDENT         shift, and go to state 6
    KW_FUNCTION   shift, and go to state 7
    KW_PROCEDURE  shift, and go to state 8
    KW_RESULT     shift, and go to state 9
    KW_GOTO       shift, and go to state 10
    KW_RETURN     shift, and go to state 11
    KW_IF         shift, and go to state 12
    KW_FOR        shift, and go to state 13
    KW_REPEAT     shift, and go to state 14
    KW_VAR        shift, and go to state 15
    KW_WHILE      shift, and go to state 16
    KW_TYPE       shift, and go to state 17

    $default  reduce using rule 4 (statement_list)

    statement_list   go to state 18
    statement        go to state 19
    loops            go to state 20
    if_statement     go to state 21
    while_statement  go to state 22
    for_statement    go to state 23
    label_decl       go to state 24
    goto_statement   go to state 25
    proc_call        go to state 26
    assignment       go to state 27
    subprogram_def   go to state 28
    type_def         go to state 29
    var_declaration  go to state 30


State 4

    2 program_decl: KW_PROGRAM IDENT . ';'

    ';'  shift, and go to state 31


State 5

    0 $accept: program $end .

    $default  accept


State 6

   32 label_decl: IDENT . ':' label_body
   43 proc_call: IDENT . '(' arguments ')'
  108 assignment: IDENT . ASSIGN expression ';'

    ASSIGN  shift, and go to state 32
    '('     shift, and go to state 33
    ':'     shift, and go to state 34


State 7

  123 subprogram_def: KW_FUNCTION . IDENT '(' proc_def_arguments ')' ':' FuncReturnTypes ';' statement_list body ';'

    IDENT  shift, and go to state 35


State 8

  124 subprogram_def: KW_PROCEDURE . IDENT '(' proc_def_arguments ')' ';' statement_list body ';'

    IDENT  shift, and go to state 36


State 9

  109 assignment: KW_RESULT . ASSIGN expression ';'

    ASSIGN  shift, and go to state 37


State 10

   42 goto_statement: KW_GOTO . IDENT ';'

    IDENT  shift, and go to state 38


State 11

   11 statement: KW_RETURN .

    $default  reduce using rule 11 (statement)


State 12
